--- a/app/templates/data/article.html
+++ b/app/templates/data/article.html
@@ -73,7 +73,9 @@
                 <hr class="full-divider">
 
                 <div data-toggle="fieldset" id="compound-fieldset">
-                        {{ form.add_compound(class_="btn btn-primary", style="margin-bottom:5px") }}
+                        <button type="button" class="btn btn-primary" id="addCompound">
+                            <span class="fas fa-plus"></span> Add Compound
+                        </button>
                         <div class="dropdown" style="padding-bottom: 2px">
                             <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" id="compoundMenuBtn">
                             Curated Compounds (#)<span class="caret"></span></button>
@@ -96,8 +98,8 @@
                             </div>
                             <div class="row">
                                 <div class="compound-data-group col-11">
-                                        {{ compound.form.curated_compound.label }}
-                                        {{ compound.form.curated_compound(class_="known-compound-input") }}
+                                        {{ compound.form.id(style="display:none") }}
+                                        {{ compound.form.curated_compound(style="display:none") }}
                                     <div class="form-group">
                                         {{ compound.form.name.label(class_="control-label text-left") }}
                                         {{ compound.form.name(class_="name-input form-control") }}
@@ -112,13 +114,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-1" style="margin:auto;text-align:center;">
-                                <button type="button" class="btn btn-danger" data-toggle="fieldset-remove-row" id="compound-{{ loop.index0 }}-remove">
-                                    <span class="fas fa-trash"></span>
-                                </button>
-                            </div>
                         </div>
                     {% endfor %}
+                    <div class="col-1" style="margin:auto;text-align:center;">
+                        <button type="button" class="btn btn-danger" id="delCompound">
+                            <span class="fas fa-trash"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="row bottom-div col-12">
