Move FAQ to separate markdown/html file - Convert with pandoc

--- a/app/templates/home/guide.html
+++ b/app/templates/home/guide.html
@@ -8,129 +8,6 @@
         </div>
     </div>
     <div class="container">
-        <h3>Introduction</h3>
-        <p>Thank you for participating in data curation for the Natural Product
-           Atlas! An early version of the Atlas is available at npatlas.org,
-           please sign up and have a look around.</p>
-        <h3>FAQs</h3>
-        <h4>Compounds</h4>
-        <p>
-            <em>Q: "The reference for my compound is not about natural
-                products. Should I reject this compound?"</em><br>
-            A: No. Almost all the compounds you are asked to curate are natural
-            products. However, the reference may be incorrect. Please search
-            Scholar to look for the correct reference, and add it using the
-            doi. If it is hard to find the original reference, check 'Needs
-            work' and move on.
-        </p>
-        <p>
-            <em>Q: "This compound was isolated a long time ago, and finding
-                the right reference is taking a long time"</em><br>
-            A: Check 'needs work', note in the comments box that it is hard
-            to sort out, and move on. If you spend more than 2 - 3 minutes on
-            a compound, it is time to move on and leave it for us to sort out.
-        </p>
-        <p>
-            <em>Q: "The double bonds in the structure have wiggly lines"</em><br>
-            A: This is a known bug in our software display tool. We're working
-            on it. It is OK to submit these
-        </p>
-        <p>
-            <em>Q: "Amide bonds in the structure look strange (wrong
-                tautomer)"</em><br>
-            A: This is a problem that we need to fix. Please check 'Needs
-            Chemdraw'.
-        </p>
-        <p>
-            <em>Q: "The compound has a water/ HCl/ second molecule/ MeOH in
-                the image"</em><br>
-            A: We need to fix this. Please check 'Needs chemdraw'
-        </p>
-        <h4>Citations</h4>
-        <p>
-            <em>Q: "The citation data is correct, but the doi is missing"</em><br>
-            A: This is OK. Click submit and move on. We will fix missing
-            doi's using an automated script
-        </p>
-        <p>
-            <em>Q: "The paper has nothing to do with this compound"</em><br>
-            A: Click 'forward/ back' to look at the other candidate papers
-            for the compound. If it is not one of those, use Scholar or other
-            tools to try to find the correct article
-        </p>
-        <p>
-            <em>Q: "Everything is OK, but the issue number is missing"</em><br>
-            A: This is OK. Click Submit
-        </p>
-        <p>
-            <em>Q: "This is an ejournal that doesn't have volume/issue/page
-                numbers"</em><br>
-            A: Try to use the doi to get the citation data. If this doesn't
-            work, put the information in the page numbers box
-        </p>
-        <h4>Source organisms</h4>
-        <p>
-            <em> Q: "The authors only report the taxonomy to the genus
-                level"</em><br>
-            A: This is OK. Put 'Streptomyces sp.' (or whatever the genus is)
-            in the source organism box.
-        </p>
-        <p>
-            <em>Q: "The source fungus/ bacterium was not identified at
-                all"</em><br>
-            A: Put 'unknown bacterium' (or fungus) in the source organism box
-        </p>
-        <p>
-            <em>Q: "The fungus is a plant endophyte. Should I include the plant
-                in the list of sources?"</em><br>
-            A: No. We are only capturing data about the actual microbial source organisms.
-        </p>
-        <h4>Fermentation Methods</h4>
-        <p>
-            <em>Q: "Is culturing the same isolate under different fermentation conditions
-                OK?"</em><br>
-            A: Yes, this is fine
-        </p>
-        <p>
-            <em>Q: "What about feeding cultures with NaBr to make brominated
-                products?"</em><br>
-            A: This is in a grey area, but we decided to include these compounds.
-        </p>
-        <p>
-            <em>Q: "What about the use of elicitors (e.g. HDAC inhibitors in
-                fungal cultures) to induce new products?"</em><br>
-            A: These are OK
-        </p>
-        <p>
-            <em>Q: "What is the policy about co-culture?"</em><br>
-            A: Compounds derived from co-culture are fine. If the producing
-            strain is known, just include this one in the source organism box.
-            If it is not known which source organism produces it, include both
-            source organisms as separate entries in the source organism box
-        </p>
-        <h4>Biosynthesis/genetic manipulation</h4>
-        <h5>In general you should follow the rule that the NP Atlas only
-            includes compounds if they could plausibly be found in nature.</h5>
-        <p>
-            <em>Q: "Should I include compounds from heterologous
-                expression?"</em><br>
-            A: Yes. Provided that the work incorporated an entire biosynthetic
-            gene cluster. In these cases, the source organism is the organism
-            from which the cluster was derived (if known), or 'eDNA' if derived
-            from DNA assemblages
-        </p>
-        <p>
-            <em>Q: "What about compounds made by feeding building blocks to
-                cultures?"</em><br>
-            A: If the building block is natural (e.g. proteinogenic amino
-            acids) that is OK. If it is non-natural (e.g. fluoro-phenylalanine)
-            this should be rejected. If you are not sure, check 'Needs work'
-            and put a comment in the comments field
-        </p>
-        <p>
-            <em>Q: "What about studies that delete/activate regulators of
-                biosynthetic machinery?"</em><br>
-            A: These are OK
-        </p>
+        {% include "home/guide_faq.html" %}
     </div>
 {% endblock %}
