Styling dataset dashboard complete

--- a/app/templates/data/dashboard.html
+++ b/app/templates/data/dashboard.html
@@ -38,9 +38,9 @@
                         <td> {{ dataset.last_edit_date }} </td>
                         <td>
                             {% if dataset.completed %}
-                                <i>TRUE</i>
+                                <i class="far fa-check-circle green"></i>
                             {% else%}
-                                <i>FALSE</i>
+                                <i class="far fa-times-circle red"></i>
                             {% endif%}
                         </td>
                     </tr>
