More styling dataset dashboard

--- a/app/templates/data/dashboard.html
+++ b/app/templates/data/dashboard.html
@@ -12,11 +12,11 @@
             <thead>
                 <tr>
                     <th width="15%">Start or Resume Session</th>
-                    <th width="20%">Number Articles</th>
+                    <th width="20%" style="text-align: center">Number Articles</th>
                     <th width="15%">List Articles</th>
                     <th width="25%">Create Date</th>
                     <th width="25%">Last Edit Date</th>
-                    <th width="15%">Completed</th>
+                    <th width="15%" style="text-align: center">Completed</th>
                 </tr>
             </thead>
             <tbody>
