Bug fixes, cleanup, and better NPAtlas tracking

--- a/app/templates/data/articles.html
+++ b/app/templates/data/articles.html
@@ -61,7 +61,7 @@
         </div>
     {% endif%}
     <div>
-        <p>Note: An article higlighed with a red background indicates an article which has been flagged as not about natural product isolation.</p>
+        <p>Note: An article highlighted with a red background indicates an article which has been flagged as not about natural product isolation.</p>
     </div>
 </section>
 {% endblock %}
