--- a/app/templates/data/article.html
+++ b/app/templates/data/article.html
@@ -114,7 +114,7 @@
                             <div class="row">
                                 <div class="compound-data-group col-11">
                                         {{ compound.form.id(style="display:none") }}
-                                        {{ compound.form.curated_compound(style="display:none") }}
+                                        {{ compound.form.npaid(style="display:none") }}
                                     <div class="form-group">
                                         {{ compound.form.name.label(class_="control-label text-left") }}
                                         {{ compound.form.name(class_="name-input form-control") }}
