--- a/app/templates/data/article.html
+++ b/app/templates/data/article.html
@@ -111,7 +111,8 @@
                                 <div class="col-12" style="margin-left:auto;margin-right :auto;text-align:center;">
                                     <div class='compound-canvas' id='compound-canvas-{{ loop.index0 }}' style="width:500px;height:500px"
                                         data-widget="Kekule.ChemWidget.Viewer2D" data-enable-toolbar="true" data-auto-size="false" data-padding="20"
-                                        data-toolbar-evoke-modes="[0]" data-autofit="true" data-enable-edit="false">
+                                        data-autofit="true" data-enable-edit="false"
+                                        data-predefined-setting="customPreset">
                                     </div>
                                     <!-- <canvas class='compound-canvas' id='compound-canvas-{{ loop.index0 }}' width="400px" height="400px"></canvas> -->
                                     <h4 id="compound-formula-{{ loop.index0 }}" class="compound-formula"></h4>
