Modify needs work behavior for listing articles in dataset

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -245,6 +245,10 @@ div.scrollmenu button {
     background: #f8d7da !important;
 }
 
+.yellow-background {
+    background: #FCFD9E !important;
+}
+
 .green {
     color: #3bb91c
 }
