--- a/app/templates/home/guide_faq.html
+++ b/app/templates/home/guide_faq.html
@@ -1,6 +1,6 @@
 <h2 id="introduction">Introduction</h2>
 <p>Thank you for participating in data curation for the Natural Product Atlas! The Atlas is available at <a href="npatlas.org" class="uri">npatlas.org</a>, please sign up and have a look around.</p>
-<p>For an tutorial on how to use the Curator, watch <a href="https://youtu.be/DMpSUehCOI4">this video</a></p>
+<p>For a tutorial on how to use the Curator, watch <a href="https://youtu.be/DMpSUehCOI4">this video</a>.</p>
 <h2 id="faq">FAQ</h2>
 <h4 id="compounds">Compounds</h4>
 <p>Q: <em>“The reference for my compound is not about natural products. Should I reject this article?”</em></p>
