--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -286,3 +286,45 @@ div.scrollmenu button {
 #addCompound {
     margin: 0px 0px 5px;
 }
+
+/* Center the loader */
+#loader-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    z-index: 1;
+    background-color: rgb(128, 175, 187);
+    opacity: 0.95;
+    border: 1px solid #f3f3f3;
+    border-radius: 25px;
+    width: 800px;
+    height: 800px;
+}
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+  }
+
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
