--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,7 +66,7 @@
                                 <a class="nav-link" href="{{ url_for('admin.list_curators') }}">Curators</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('admin.list_articles') }}">Articles</a>
+                                <a class="nav-link" href="{{ url_for('admin.list_datasets') }}">Datasets</a>
                             </li>
                         {% else %}
                             <li class="nav-item">
