--- a/app/templates/data/article.html
+++ b/app/templates/data/article.html
@@ -187,5 +187,5 @@ function showPage() {
   document.getElementById("loader-box").style.display = "none";
 }
 </script>
-<script src="{{ url_for('static', filename='js/page.js') }}"></script>
+<script src="{{ url_for('static', filename='js/article.js') }}"></script>
 {% endblock %}
