--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,9 +59,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('home.admin_dashboard') }}">Admin Dashboard</a>
                             </li>
-                            <li class="nav-item">
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('data.curator_dashboard', cur_id=current_user.id) }}">Dashboard</a>
-                            </li>
+                            </li> -->
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('admin.list_curators') }}">Curators</a>
                             </li>
